<resources>
    <string name="app_name">LIFO</string>

    <string name="none">null</string>

    <!-- Auth -->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="signin">로그인</string>
    <string name="signup">회원가입</string>
    <string name="findpw">비밀번호 찾기</string>
    <string name="author">닉네임</string>

    <!-- BoardName -->
    <string name="allboard">전체</string>
    <string name="board">게시판</string>
    <string name="freeboard">자유게시판</string>
    <string name="tipsboard">Tips</string>
    <string name="courseboard">진로게시판</string>
    <string name="qna">Q&amp;A</string>
    <string name="studyboard">스터디/모임</string>
    <string name="bestboard">BEST</string>
    <string name="hotboard">실시간 인기글</string>

    <string name="mypost">내가 쓴 글</string>
    <string name="mycomment">댓글 단 글</string>
    <string name="scrap">스크랩</string>

    <!-- Act -->
    <string name="posting">글쓰기</string>
    <string name="search">검색</string>
    <string name="post">등록</string>
    <string name="more">더보기</string>

    <!-- Bottom Navigation -->
    <string name="b_home">Home</string>
    <string name="b_board">Board</string>
    <string name="b_search">Search</string>
    <string name="b_noti">Noti</string>
    <string name="b_account">Account</string>
    <string name="b_write">Write</string>

    <!-- More -->
    <string name="more_report">신고하기</string>
    <string name="more_recomment">대댓글 작성</string>
    <string name="more_delete">삭제하기</string>

    <!-- Account -->
    <string name="like_inform">내 이야기가 공감받고 있어요.</string>
    <string name="account_setting">계정설정</string>
    <string name="account_setAuthor">닉네임설정</string>
    <string name="account_setPassword">패스워드변경</string>
    <string name="account_exit">회원탈퇴</string>
    <string name="account_signout">로그아웃</string>
    <string name="account_setApp">앱 설정</string>
    <string name="account_setNoti">알람 설정</string>
    <string name="account_inform">이용 안내</string>
    <string name="account_faq">문의하기</string>
    <string name="account_notice">공지사항</string>
    <string name="account_terms">이용약관</string>
    <string name="account_rule">개인정보 처리 방침</string>
    <string name="account_license">오픈소스 라이센스</string>

    <!-- inform -->
    <string name="date">날짜</string>
    <string name="title">제목</string>
    <string name="writing_guide">글 내용을 입력해주세요.\n\n주의사항: 질문 글의 경우 댓글이 달릴 때는삭제 할 수 없습니다. 또한, 신고 받는 경우 일정기간 이용이 정지될 수 있습니다.</string>
    <string name="comment_guide">댓글을 입력하세요.</string>
    <string name="recomment_guide">대댓글을 입력하세요.</string>
    <string name="search_guide">검색할 내용을 입력해주세요.</string>
    <string name="image_guide">이미지 설명을 입력할 수 있습니다.</string>

    <string name="default_notification_channel_id">fcm_default_channel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
