<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    tools:context=".BoardMenuActivity">

    <Button
        android:id="@+id/boardmenu_button_free"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/freeboard"/>
    <Button
        android:id="@+id/boardmenu_button_qa"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/boardmenu_button_free"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorWhite"
        android:text="@string/qna"/>
    <Button
        android:id="@+id/boardmenu_button_tips"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/boardmenu_button_qa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorWhite"
        android:text="@string/tipsboard"/>
    <Button
        android:id="@+id/boardmenu_button_study"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/boardmenu_button_tips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorWhite"
        android:text="@string/studyboard"/>

</androidx.constraintlayout.widget.ConstraintLayout>